# xiaoshi

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  character.yaml  config.example.yaml  config.yaml  go.mod  go.sum  kovi.conf.toml  kovi.plugin.toml  main.go
.github/workflows/: docker-build.yml
cmd/: onebot.go  root.go  zero-plugin.go
debug/: main.go
mcpserver/terminal/: main.go
pkg/aichat-plugin/: command.go  command_test.go  qqbot.go  register.go
pkg/bot/: bot.go  command.go  command_test.go  qqbot.go
pkg/chat/: session.go
pkg/chatgpt/: chat.go  chatgpt.go  chatgpt_test.go  history.go  model.go  prompt.go
pkg/config/: config.go  load.go  loader.go
pkg/core/: command.go  helper.go  onebotcore.go
pkg/heathz/: healthz.go
pkg/mcp/: client.go  helper.go  history.go
pkg/server/: map.go  server.go
pkg/util/: map.go  printer.go
src/: crypto.rs  main.rs
